objects/smagicinteract__Message_Object_Config__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Name_Field__c</fullName>
        <label>Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Opt_Out_Field_Value__c</fullName>
        <label>Opt Out Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Opt_Out_Field__c</fullName>
        <label>Opt Out Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Opt_Out_Operator__c</fullName>
        <description>operator to be used to check if record is opted out</description>
        <label>Opt Out Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>notequals</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>notcontains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Message Object Config</label>
    <listViews>
        <fullName>Nolan_Daigle_Message_Object_Config</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__Object_Name__c</columns>
        <columns>smagicinteract__Name_Field__c</columns>
        <columns>smagicinteract__Opt_Out_Field__c</columns>
        <columns>smagicinteract__Opt_Out_Operator__c</columns>
        <columns>smagicinteract__Opt_Out_Field_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Message Object Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Object Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>